syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

enum OrderType {
  BUY = 0;
  SELL = 1;
}

enum Status {
  OPEN = 0;
  PARTIALLY_FILLED = 1;
  FILLED = 2;
  CANCELLED = 3;
}

message Order {
  string id = 1;
  string user_name = 2;
  string user_email = 3;
  string market_id = 4;
  OrderType type = 5;
  Status status = 6;
  int64 price = 7;
  int64 amount = 8;
  int64 filled_amount = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}