syntax = "proto3";

package pb;

import "transaction.proto";

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";


message GetTransactionByIDRequest {
  string transaction_id = 1;
}

message GetTransactionByIDResponse {
  Transaction transaction = 1;
}